<?php

namespace App\WebSocket\Monitoring;

use App\WebSocket\Monitoring\Contracts\DashboardInterface;

/**
 * Реализация интерфейса DashboardInterface для отображения состояния системы.
 *
 * @package App\WebSocket\Monitoring
 * @author Smetanin Sergey
 * @version 1.0.0
 * @since 1.0.0
 */
class Dashboard implements DashboardInterface
{
    // Массив для хранения активных соединений (пример)
    protected array $activeConnections = [];

    // Массив для хранения логов (пример)
    protected array $log = [];

    /**
     * Отображает активные соединения в системе.
     *
     * @return array Массив с данными о текущих активных соединениях.
     */
    public function displayActiveConnections(): array
    {
        // Здесь можно добавить логику для получения активных соединений
        return $this->activeConnections;
    }

    /**
     * Отображает журнал логов системы.
     *
     * @return array Массив с логами системы.
     */
    public function displayLog(): array
    {
        // Здесь можно добавить логику для получения логов
        return $this->log;
    }
}
